Update 1808561054_I MADE EKO SATRIA WIGUNA.html

--- a/Modul 1 (XHTML)/1808561054_I MADE EKO SATRIA WIGUNA.html
+++ b/Modul 1 (XHTML)/1808561054_I MADE EKO SATRIA WIGUNA.html
@@ -16,7 +16,7 @@
         <br> when an unknown printer took a galleyof type and scrambled it to make a type specimen book</p>
         <br><marquee>scrolling tag marquee</marquee>
         <br><br><br><br>
-        <p>is simply dummy <i>tag em</i> text of printing <i>tag italic</i> <del>tag del</del></p>
+        <p>is simply dummy <em>tag em</em> text of printing <i>tag italic</i> <del>tag del</del></p>
         <p>My favorite color is <del>blue</del> <ins>red</ins>!</p>
         <ins>tag underline</ins>
         <p><code>Code <b>Tag</b> Hello World</code></p>
